syntax = "proto3";
package raft_service;

service RaftService {
  // raft RPC
  rpc AppendEntries(RaftRequest) returns (RaftReply);
  rpc InstallSnapshot(RaftRequest) returns (RaftReply);
  rpc Vote(RaftRequest) returns (RaftReply);
}

message RaftRequest {
  string data = 1;
}

message RaftReply {
  string data = 1;
}